--- a/pagina.html
+++ b/pagina.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola Mundo</title>
+  
 </head>
 <body>
 
-    Historia de mi vida
+    <h1>Piedra, papel o tijera</h1>
+    <p>Estamos empezando</p> 
     
 </body>
+<script src="js/Piedra.js"></script>
 </html>
